src/index.css
/* ... */
.bottom-spacing {
	margin-bottom: var(--spacing-five);
	text-align: center;
}

.bottom-spacing h4 {
	display: inline-block;
	color: #ffae00;
}

.bottom-spacing h4:hover {
	cursor: pointer;
	-webkit-animation: text-shadow-drop-center 0.6s both;
	animation: text-shadow-drop-center 0.6s both;
}

@-webkit-keyframes text-shadow-drop-center {
	0% {
		text-shadow: 0 0 0 rgba(0, 0, 0, 0);
	}

	100% {
		text-shadow: 0 0 18px rgba(0, 0, 0, 0.75);
	}
}

@keyframes text-shadow-drop-center {
	0% {
		text-shadow: 0 0 0 rgba(0, 0, 0, 0);
	}

	100% {
		text-shadow: 0 0 18px rgba(0, 0, 0, 0.75);
	}
}

.bio-formatting {
	text-align: center;
}

@-webkit-keyframes tracking-in-contract {
	0% {
		letter-spacing: 1em;
		opacity: 0;
	}

	40% {
		opacity: 0.6;
	}

	100% {
		letter-spacing: normal;
		opacity: 1;
	}
}

@keyframes tracking-in-contract {
	0% {
		letter-spacing: 1em;
		opacity: 0;
	}

	40% {
		opacity: 0.6;
	}

	100% {
		letter-spacing: normal;
		opacity: 1;
	}
}

.bio-text-formatting {
	position: relative;
	text-align: center;
	width: 65%;
	margin: 0 auto;
	z-index: 1;
	-webkit-animation: focus-in-expand-fwd 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	animation: focus-in-expand-fwd 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;

}

@-webkit-keyframes focus-in-expand-fwd {
	0% {
		letter-spacing: -0.5em;
		-webkit-transform: translateZ(-800px);
		transform: translateZ(-800px);
		-webkit-filter: blur(12px);
		filter: blur(12px);
		opacity: 0;
	}

	100% {
		-webkit-transform: translateZ(0);
		transform: translateZ(0);
		-webkit-filter: blur(0);
		filter: blur(0);
		opacity: 1;
	}
}

@keyframes focus-in-expand-fwd {
	0% {
		letter-spacing: -0.5em;
		-webkit-transform: translateZ(-800px);
		transform: translateZ(-800px);
		-webkit-filter: blur(12px);
		filter: blur(12px);
		opacity: 0;
	}

	100% {
		-webkit-transform: translateZ(0);
		transform: translateZ(0);
		-webkit-filter: blur(0);
		filter: blur(0);
		opacity: 1;
	}
}


.resume-formatting {
	display: flex;
	flex-direction: column;
	text-align: center;
}

.resume-formatting li {
	-webkit-animation: tracking-in-contract 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
	animation: tracking-in-contract 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
}

.resume-formatting h5 {
	text-decoration: underline;
	z-index: 2;
	-webkit-animation: tracking-in-expand 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
	animation: tracking-in-expand 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
}

@-webkit-keyframes tracking-in-expand {
	0% {
		letter-spacing: -0.5em;
		opacity: 0;
	}

	40% {
		opacity: 0.6;
	}

	100% {
		opacity: 1;
	}
}

@keyframes tracking-in-expand {
	0% {
		letter-spacing: -0.5em;
		opacity: 0;
	}

	40% {
		opacity: 0.6;
	}

	100% {
		opacity: 1;
	}
}


.resume-formatting ol {
	z-index: 2;
}



.BsCloudDownload {
	background: -webkit-linear-gradient(top right, #ffe897, #f98a05);
	background: linear-gradient(to bottom left, #ffe897, #f98a05);
	-webkit-background-clip: text;
	background-clip: text;
	-webkit-text-fill-color: transparent;
}

.resume-formatting ol {
	text-align: center;
	padding: 0;
}

.resume-formatting li {
	list-style: none;
}


.padding {
	padding: 25px;
}

@media screen and (max-width: 995px) {
	header div {
		position: relative;
		width: 100%;
	}

	header div h2 {
		position: absolute;
		top: 50%;
		transform: translateY(-50%);
	}

	h2 {
		font-size: 1.5rem;
	}

	nav ul li span {
		font-size: 0.75em;
	}

	.mobile-header {
		width: 100%;
	}

	.mobile-row {
		display: block;
		justify-content: center;
		padding: 0;
	}

	.mobile-view {
		display: inline;
		text-align: end;
	}

	input {
		width: 350px;
	}

	textarea {
		width: 350px;
		height: 120px;
		border: 3px solid #cccccc;
		padding: 5px;
	}

	ol {
		font-size: 0.75rem;
	}

	.flex-row.mobile-row {
		justify-content: center;
	}

	.card {
		width: 100%;
		margin-bottom: 10px;
		text-align: center;
	}
}

@media screen and (max-width: 1525px) {
	.mobile-row2 {
		display: block;
		justify-content: center;
		padding: 0;
		-webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	}

	ol {
		font-size: 0.75rem;
	}

	.flex-row.mobile-row2 {
		justify-content: center;
	}

	.card {
		width: 100%;
		margin-bottom: 10px;
		text-align: center;
	}
}

@-webkit-keyframes slide-in-top {
	0% {
	  -webkit-transform: translateY(-1000px);
			  transform: translateY(-1000px);
	  opacity: 0;
	}
	100% {
	  -webkit-transform: translateY(0);
			  transform: translateY(0);
	  opacity: 1;
	}
  }
  @keyframes slide-in-top {
	0% {
	  -webkit-transform: translateY(-1000px);
			  transform: translateY(-1000px);
	  opacity: 0;
	}
	100% {
	  -webkit-transform: translateY(0);
			  transform: translateY(0);
	  opacity: 1;
	}
  }
  
  

@media screen and (max-width: 455px) {
	.card-text {
		font-size: 0.80rem;
		height: 5rem;
		color: var(--textC);
	}

}

@media screen and (max-width: 438px) {
	.card-text {
		font-size: 0.75rem;
		height: 5rem;
	}

}

@media screen and (max-width: 420px) {
	.card-text {
		font-size: 0.70rem;
		height: 5rem;
	}

}

@media screen and (max-width: 376px) {
	.card-text {
		font-size: 0.70rem;
		height: 6rem;
	}

	body {
		line-height: 1;
	}
}

@media screen and (max-width: 325px) {
	.page-header {
		font-size: 2rem;
	}
}

@media screen and (max-width: 303px) {
	.mobile-view {
		font-size: 15px;
	}

	header h2 {
		font-size: 18px;
	}

	.card-text {
		font-size: 0.55rem;
		height: 5rem;
	}
}

@media screen and (max-width: 268px) {
	.card-text {
		font-size: 0.50rem;
		height: 5rem;
	}

	header h2 {
		margin-left: 0;
	}

	.page-header {
		font-size: 1.5rem;
	}
}
/* ... */

